--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <!-- Bootstrap 5 -->
     <link
       rel="stylesheet"
-      href="/assets/vendor/bootstrap-5.2.3-dist/css/bootstrap.min.css"
+      href="assets/vendor/bootstrap-5.2.3-dist/css/bootstrap.min.css"
     />
 
     <!-- AOS Animation -->
-    <link rel="stylesheet" href="/assets/vendor/aos-master/dist/aos.css" />
+    <link rel="stylesheet" href="assets/vendor/aos-master/dist/aos.css" />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
   <body data-bs-spy="scroll" data-bs-target="#navbar-scroll">
@@ -82,7 +82,7 @@
         </div>
         <div class="col-lg-6 d-flex align-self-center">
           <img
-            src="/assets/img/why-us.png"
+            src="assets/img/why-us.png"
             alt=""
             class="img-fluid"
             data-aos="fade-left"
@@ -558,8 +558,8 @@
     </div>
     <!-- End | Footer Section -->
 
-    <script src="/assets/vendor/bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/vendor/aos-master/dist/aos.js"></script>
+    <script src="assets/vendor/bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/aos-master/dist/aos.js"></script>
     <script>
       AOS.init({
         duration: 1000,
